manifests/02-deployment-nginx.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: nginx-deployment
  namespace: nginx-lab

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
      
          volumeMounts:
            - name: nginx-data
              mountPath: /usr/share/nginx/html

      volumes:
        - name: nginx-data
          persistentVolumeClaim:
            claimName: nginx-storage
