manifests/03-service-nginx.yaml
apiVersion: v1

kind: Service

metadata:
    name: nginx-service
    namespace: nginx-lab

spec:
  selector:
    app: nginx

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: NodePort
